--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -50,7 +50,7 @@
 
 <h3>Manual</h3>
 
-<p>For advanced Docker users, the manual installation might seem more familiar. To setup Appwrite manually, download the Appwrite base <a href="/docker-compose.yml" target="_blank">docker-compose.yml</a> file. After the download completes, update the different environment variables as you wish and start the Appwrite stack using the following Docker command:</p>
+<p>For advanced Docker users, the manual installation might seem more familiar. To setup Appwrite manually, download the Appwrite base <a href="https://gist.github.com/eldadfux/977869ff6bdd7312adfd4e629ee15cc5" target="_blank">docker-compose.yml and .env</a> files. After the download completes, update the different environment variables as you wish in the .env file and start the Appwrite stack using the following Docker command:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose up -d --remove-orphans</code></pre>
