Improved role description

--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -61,7 +61,7 @@
             role:guest
             <p class="margin-top-small text-fade">version >= 0.7</p>
         </td>
-        <td>Access to any guest user.</td>
+        <td>Access to any guest user. Logged in users don't have access to this role.</td>
     </tr>
     <tr>
         <td>
