--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -1,3 +1,19 @@
+<?php
+$platforms = $this->getParam('platforms');
+$versions = [];
+
+foreach($platforms['server']['languages'] ?? [] as $lang) {
+    $key = $lang['key'] ?? '';
+    $version = $lang['version'] ?? '';
+    
+    if(!empty($key)) {
+        $versions[$key] = $version;
+    }
+}
+
+$dartVersion = $versions['dart'] ?? '';
+?>
+
 <p>Appwrite is a development platform providing you easy yet powerful API and management console to get your next project up and running quickly.</p>
 
 <p>This tutorial will help you start using Appwrite products and build your next project. Before starting, make sure you have followed the Appwrite <a href="/docs/installation">installation guide</a>, and you have an Appwrite server instance up and running on your host machine or server.</p>
@@ -45,7 +61,7 @@
             <p>Add dart_appwrite to pubspec.yaml</p>
             <div class="ide margin-top-small" data-lang="yaml" data-lang-label="Dart SDK">
                 <pre class="line-numbers"><code class="prism language-yaml" data-prism>dependency:
-    dart_appwrite: <latest></code></pre>
+    dart_appwrite: <?php echo $this->escape($dartVersion); ?></code></pre>
             </div>
             <p>Get Dependency</p>
             <div class="ide margin-top-small" data-lang="bash" data-lang-label="Dart SDK">
