fix cli add command

--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -62,7 +62,7 @@ $dartVersion = $versions['dart'] ?? '';
 Install-Package Appwrite
 
 # or .NET CLI
-csharp add package Appwrite</code></pre>
+dotnet add package Appwrite</code></pre>
         </div>
     </li>
     <li>
