--- a/app/views/docs/rate-limits.phtml
+++ b/app/views/docs/rate-limits.phtml
@@ -1,4 +1,4 @@
-<p>Some of Appwrite API endpoint has a rate limit to avoid abuse or brute-force attack against Appwrite's REST API. Each Appwrite route documentation has information about any rate limits that might apply to him.</p>
+<p>Some of Appwrite's API endpoints have a rate limit to avoid abuse or brute-force attack against Appwrite's REST API. Each Appwrite route documentation has information about any rate limits that might apply to him.</p>
 
 <p>You can check the returned HTTP headers of any API request to see your current rate limit status:</p>
 
