Include old env with deprecation notice

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -307,6 +307,13 @@ void main() { // Init SDK
             </td>
             <td>A <a href="https://jwt.io/">JSON Web Token</a> generated for the user that executes your function.</td>
         </tr>
+        <tr>
+            <td>
+                APPWRITE_FUNCTION_EVENT_PAYLOAD
+                <p class="margin-top-small text-fade">version &lt; 0.8.0</p>
+            </td>
+            <td>Your function event payload. Deprecated in favor of APPWRITE_FUNCTION_EVENT_DATA in version 0.8.0.</td>
+        </tr>
     </tbody>
 </table>
 
