--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -48,7 +48,7 @@
     </li>
 </ul>
 
-<h3>Manual</h3>
+<h3>Manual (using docker-compose.yml)</h3>
 
 <p>For advanced Docker users, the manual installation might seem more familiar. To setup Appwrite manually, download the Appwrite base <a href="https://gist.github.com/eldadfux/977869ff6bdd7312adfd4e629ee15cc5" target="_blank">docker-compose.yml and .env</a> files. After the download completes, update the different environment variables as you wish in the .env file and start the Appwrite stack using the following Docker command:</p>
 
