--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -2,7 +2,7 @@
 
 <h2>System Requirements</h2>
 
-<p>Appwrite was designed to run well on both small and large deployment. The minimum requirements to run Appwrite is as little as <b>1 CPU core</b> and <b>512MB or RAM (2GB Recommended)</b>, and an operating system that supports Docker.</p>
+<p>Appwrite was designed to run well on both small and large deployment. The minimum requirements to run Appwrite is as little as <b>1 CPU core</b> and <b>512MB of RAM (2GB Recommended)</b>, and an operating system that supports Docker.</p>
 
 <h2>Install with Docker</h2>
 
