--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -310,7 +310,7 @@ void main() { // Init SDK
         <tr>
             <td>
                 APPWRITE_FUNCTION_EVENT_PAYLOAD
-                <p class="margin-top-small text-fade">version &lt; 0.8.0</p>
+                <p class="margin-top-small text-fade">version &lt; 0.8.0 <span class="text-danger">(deprecated)</span></p>
             </td>
             <td>Your function event payload. Deprecated in favor of APPWRITE_FUNCTION_EVENT_DATA in version 0.8.0.</td>
         </tr>
