--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -39,7 +39,7 @@ $jsVersion = $versions['web'] ?? '';
     <pre class="line-numbers"><code class="prism language-bash" data-prism>npm install appwrite</code></pre>
 </div>
 
-<p>If you're using a bundler (like <a href="http://browserify.org/" target="_blank" rel="noopener">Browserify<a/> or <a href="https://webpack.js.org/" target="_blank" rel="noopener">webpack</a>), you can import the Appwrite module when you need it:</p>
+<p>If you're using a bundler (like <a href="https://rollupjs.org/" target="_blank" rel="noopener">Rollup<a/> or <a href="https://webpack.js.org/" target="_blank" rel="noopener">webpack</a>), you can import the Appwrite module when you need it:</p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>import * as Appwrite from "appwrite";</code></pre>
@@ -80,7 +80,9 @@ appwrite
 <p>Once your SDK object is set, access any of the Appwrite services and choose any request to send. Full documentation for any service method you would like to use can be found in your SDK documentation or in the API References section.</p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
-                    <pre class="line-numbers"><code class="prism language-javascript" data-prism>// Register User
+<pre class="line-numbers">
+<code class="prism language-javascript" data-prism>
+// Register User
 appwrite
     .account.create('me@example.com', 'password', 'Jane Doe')
         .then(function (response) {
@@ -88,12 +90,30 @@ appwrite
         }, function (error) {
             console.log(error);
         });
-</code></pre>
+</code>
+</pre>
+</div>
+
+<h2>Listen to Realtime Updates</h1>
+
+<p>Instead of typical HTTP requests, Appwrite also offers realtime subscriptions that allow you to listen for server-side changes which are send to the client within milliseconds. Full documentation for the available channels and best practices for Realtime can be found in the <a href="#">Realtime section</a>.</p>
+
+<div class="ide" data-lang="javascript" data-lang-label="Web SDK">
+<pre class="line-numbers">
+<code class="prism language-javascript" data-prism>
+// Listen to every storage file change
+appwrite.subscribe('files', function (payload) {
+    console.log(payload); // This is called on every update
+});
+</code>
+</pre>
 </div>
 
 <h2>Full Example</h2>
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
-                    <pre class="line-numbers"><code class="prism language-javascript" data-prism>// Init your Web SDK
+<pre class="line-numbers">
+<code class="prism language-javascript" data-prism>
+// Init your Web SDK
 var appwrite = new Appwrite();
 
 appwrite
@@ -107,7 +127,13 @@ appwrite
         }, function (error) {
             console.log(error);
         });
-</code></pre>
+        
+// Listen to every storage file change
+appwrite.subscribe('files', function (payload) {
+    console.log(payload); // This is called on every update
+});
+</code>
+</pre>
 </div>
 
 <h2>Next Steps</h2>
