--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -132,8 +132,8 @@ appwrite
             ?>
             <tr>
                 <td>
-                    <img src="/images-ee/platforms/<?php echo $icon; ?>.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
-                    <img src="/images-ee/platforms/dark/<?php echo $icon; ?>.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
+                    <img src="/images-ee/platforms/<?php echo $icon; ?>" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                    <img src="/images-ee/platforms/dark/<?php echo $icon; ?>" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
                 </td>
                 <td>
                     <?php echo $name; ?>
