--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -114,12 +114,12 @@ appwrite
 
 <h2>Demos</h2>
 
-<p>Below you can find a list of some demos to help you get started with Appwrite for web using you favorite tools and framework of choice.</p>
+<p>Below you can find a list of some demos to help you get started with Appwrite for Web using your favorite tools and framework of choice.</p>
 
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large text-size-small vertical">
         <thead>
         <tr>
-            <th style="width: 100px"></th>
+            <th style="width: 80px"></th>
             <th style="width: 160px">Demo</th>
             <th>GitHub Repository</th>
             <th style="width: 140px"></th>
