--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -120,15 +120,16 @@ appwrite
         <thead>
         <tr>
             <th style="width: 80px"></th>
-            <th style="width: 160px">Demo</th>
+            <th style="width: 180px">Demo</th>
             <th>GitHub Repository</th>
-            <th style="width: 140px"></th>
+            <th style="width: 120px"></th>
         </tr>
         </thead>
         <tbody>
         <?php foreach($demos as $demo):
             $name = $demo['name'] ?? '';
             $icon = $demo['icon'] ?? '';
+            $description = $demo['description'] ?? '';
             $source = $demo['source'] ?? '';
             $url = $demo['url'] ?? '';
             $repo = str_replace('https://github.com/', '', $source);
@@ -139,7 +140,7 @@ appwrite
                     <img src="/images-ee/platforms/dark/<?php echo $icon; ?>" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
                 </td>
                 <td>
-                    <?php echo $name; ?>
+                    <?php echo $name; ?> <span class="tooltip" data-tooltip="<?php $this->escape($description); ?>"><i class="icon-info-circled"></i></span>
                 </td>
                 <td>
                     <a href="<?php echo $source; ?>" target="_blank" rel="noopener"><?php echo $repo; ?></a>
