Removed tooltip from demo list

--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -140,7 +140,7 @@ appwrite
                     <img src="/images-ee/platforms/dark/<?php echo $icon; ?>" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
                 </td>
                 <td>
-                    <?php echo $name; ?> <span class="tooltip" data-tooltip="<?php echo $this->escape($description); ?>"><i class="icon-info-circled"></i></span>
+                    <?php echo $name; ?>
                 </td>
                 <td>
                     <a href="<?php echo $source; ?>" target="_blank" rel="noopener"><?php echo $repo; ?></a>
