Update function variable description

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -284,7 +284,7 @@ void main() { // Init SDK
                 APPWRITE_FUNCTION_DATA
                 <p class="margin-top-small text-fade">version >= 0.8.0</p>
             </td>
-            <td>Your function's custom execution data. This variable's value contains a string in any format. If the custom data is in JSON FORMAT, it must be parsed inside the function code.</td>
+            <td>Your function's custom execution data. This variable's value contains a string in any format. If the custom data is in JSON FORMAT, it must be parsed inside the function code. Note that this variable can be set only when triggering a function using the <a href="https://appwrite.io/docs/client/functions?sdk=web#functionsCreateExecution">SDK or HTTP API</a> and the Appwrite Dashboard.</td>
         </tr>
         <tr>
             <td>
