--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -9,11 +9,11 @@ $runtimes = $this->getParam('runtimes', []);
 
 <p>Appwrite Functions allow you to extend and customize your Appwrite server functionality by executing your custom code. Appwrite can execute your custom code in response to any <a href="/docs/webhooks#events" target="_blank">Appwrite system event</a> like account creation, user login, or document update. You can also schedule your functions to run according to a CRON schedule or start them manually by triggering your function from an HTTP endpoint using the Appwrite client or server APIs.</p>
 
-<p>Appwrite Functions run in a secure, isolated Docker container. By default, Appwrite supports multiple environments for different languages that you can use to run your code.</p>
+<p>Appwrite Functions run in a secure, isolated Docker container. By default, Appwrite supports multiple runtimes for different languages that you can use to run your code.</p>
 
 <h2>Add Your Function</h2>
 
-<p>You can add a new function from your Appwrite project's dashboard. Access your Functions settings from your projects left navigation panel. Click the 'Add Function' button and choose your function name and code environment. In your Functions settings page, you can set your function event triggers, CRON schedule and set secure environment variables for your function environment.</p>
+<p>You can add a new function from your Appwrite project's dashboard. Access your Functions settings from your projects left navigation panel. Click the 'Add Function' button and choose your function name and code runtime. In your Functions settings page, you can set your function event triggers, CRON schedule and set secure environment variables for your function runtime.</p>
 
 <h2>Deploy Your Code</h2>
 
@@ -257,13 +257,13 @@ void main() { // Init SDK
         </tr>
         <tr>
             <td>
-                APPWRITE_FUNCTION_ENV_NAME
+                APPWRITE_FUNCTION_RUNTIME_NAME
             </td>
             <td>Your function environment name. Can be any of Appwrite supported execution environments.</td>
         </tr>
         <tr>
             <td>
-                APPWRITE_FUNCTION_ENV_VERSION
+                APPWRITE_FUNCTION_RUNTIME_VERSION
             </td>
             <td>Your function environment version.</td>
         </tr>
@@ -314,6 +314,20 @@ void main() { // Init SDK
             </td>
             <td>Your function event payload. Deprecated in favor of APPWRITE_FUNCTION_EVENT_DATA in version 0.8.0.</td>
         </tr>
+        <tr>
+            <td>
+                APPWRITE_FUNCTION_ENV_NAME
+                <p class="margin-top-small text-fade">version &lt; 0.8.0 <span class="text-danger">(deprecated)</span></p>
+            </td>
+            <td>Your function environment name. Can be any of Appwrite supported execution environments.</td>
+        </tr>
+        <tr>
+            <td>
+                APPWRITE_FUNCTION_ENV_VERSION
+                <p class="margin-top-small text-fade">version &lt; 0.8.0 <span class="text-danger">(deprecated)</span></p>
+            </td>
+            <td>Your function environment version.</td>
+        </tr>
     </tbody>
 </table>
 
@@ -335,7 +349,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
 
 <h3>Run Offline</h3>
 
-<p>You can quickly run your Cloud Function locally by executing the Appwrite environment locally using its corresponding Docker image. You can pass your offline container any environment variables your script needs and your entry command like in the example below.</p>
+<p>You can quickly run your Cloud Function locally by executing the Appwrite runtime locally using its corresponding Docker image. You can pass your offline container any environment variables your script needs and your entry command like in the example below.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
@@ -373,9 +387,9 @@ $image = new View(__DIR__.'/../general/image.phtml');
     </li>
 </ul>
 
-<p>The example above shows how you can mount your current working dir into the "appwrite/env-node-15.5:1.0.0" Cloud Functions environment and execute a custom command to simulate exactly how the Appwirte server will execute the function on the Appwrite server. You can also pass multiple environment variables that your code might require.</p>
+<p>The example above shows how you can mount your current working dir into the "appwrite/env-node-15.5:1.0.0" Cloud Functions runtime and execute a custom command to simulate exactly how the Appwirte server will execute the function on the Appwrite server. You can also pass multiple environment variables that your code might require.</p>
 
-<p>When running a Cloud Functions environment for a coding language that uses a central directory for managing all dependencies, you will need to package all your dependencies in your working directory under the ".appwrite" folder as mentioned in the "Handling Dependencies" step above. This will ensure your function container can access all required packages and execute your function successfully.</p>
+<p>When running a Cloud Functions runtime for a coding language that uses a central directory for managing all dependencies, you will need to package all your dependencies in your working directory under the ".appwrite" folder as mentioned in the "Handling Dependencies" step above. This will ensure your function container can access all required packages and execute your function successfully.</p>
 
 <h2>Demos & Examples</h2>
 
